bg color midificate

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header>
       <h1>Análise de coloração pessoal</h1>
       <p>Método Sazonal Expandido</p>
-      <img src="katheriny.png" alt="" />
+      <div class="img">
+        <img src="katheriny.png" alt="" />
+      </div>
     </header>
     <main>
       <form
@@ -53,7 +55,7 @@
               <input type="radio" name="1.Claro" id="color" />
               Claro
             </label>
-            <label for="">
+            <label class="input1" for="">
               <input type="radio" name="1.Escuro" id="color" />
               Escuro
             </label>
@@ -73,7 +75,7 @@
               <input type="radio" name="1.Frio" id="clima" />
               Frio
             </label>
-            <label for="">
+            <label class="input2" for="">
               <input type="radio" name="1.Quente" id="clima" />
               Quente
             </label>
