--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   </head>
   <body>
     <header>
-      <h1>Análise de coloração pessoal</h1>
-      <p>Método Sazonal Expandido</p>
+      <img class="logo" src="logo.png" alt="" />
       <div class="img">
         <img src="katheriny.png" alt="" />
       </div>
