input name width:100%

--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
         <input class="enviar" type="submit" value="Enviar" />
       </form>
     </main>
-    <footer>Produzido por Bruno Ventura</footer>
+    <footer>
+      Produzido por
+      <a
+        href="https://api.whatsapp.com/send?phone=5533999943444&text=Ol%C3%A1%2C%20vamos%20conversar%20sobre%20programa%C3%A7%C3%A3o!"
+        target="_blank"
+        >Bruno Ventura</a
+      >
+    </footer>
   </body>
 </html>
