--- a/index.html
+++ b/index.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="msapplication-TileColor" content="#b91d47" />
-    <meta name="theme-color" content="#ff0000" />
-
-    <title>Consulter</title>
     <link rel="stylesheet" href="style.css" />
+    <title>Consulter</title>
   </head>
   <body>
     <header>
-      <img class="logo" src="logo.png" alt="" />
-      <div class="img">
-        <img src="katheriny.png" alt="" />
+      <div>
+        <img class="logo" src="logo.png" alt="" />
+        <div class="img">
+          <img src="kath.png" alt="" />
+        </div>
       </div>
     </header>
     <main>
       <form
-        action="https://formsubmit.co/brunoventura70@gmail.com"
+        action="https://formsubmit.co/katherinyventuraconsultora@gmail.com"
         method="POST"
       >
         <h2>Passo a Passo</h2>
@@ -155,7 +158,7 @@
             Escuro: Inverno e Outono
           </p>
         </fieldset>
-        <h2>Estaçoes Quentes</h2>
+        <h2>Estações Quentes</h2>
         <fieldset>
           <legend>Primavera</legend>
           <label for="">
@@ -190,7 +193,7 @@
             Outono Suave
           </label>
         </fieldset>
-        <h2>Estaçoes Frias</h2>
+        <h2>Estações Frias</h2>
         <fieldset>
           <legend>Inverno</legend>
           <label for="">
