bg add fieldset

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         </label>
         <fieldset>
           <legend>Comparar Contraste</legend>
-          <label for="contraste">
+          <label for="Contraste/Baixo">
             <input type="checkbox" name="Contraste/Baixo" id="contraste" />
             Baixo
           </label>
-          <label for="contraste">
+          <label for="Contraste/Médio">
             <input type="checkbox" name="Contraste/Médio" id="contraste" />
             Médio
           </label>
-          <label for="contraste">
+          <label for="Contraste/Alto">
             <input type="checkbox" name="Contraste/Alto" id="contraste" />
             Alto
           </label>
-          <label for="contraste">
+          <label for="Contraste/Médio/Baixo">
             <input
               type="checkbox"
               name="Contraste/Médio/Baixo"
@@ -58,7 +58,7 @@
             />
             Médio/Baixo
           </label>
-          <label for="contraste">
+          <label for="Contraste/Médio/Alto">
             <input type="checkbox" name="Contraste/Médio/Alto" id="contraste" />
             Médio/Alto
           </label>
@@ -159,7 +159,7 @@
           </p>
         </fieldset>
         <h2>Estações Quentes</h2>
-        <fieldset>
+        <fieldset class="primavera">
           <legend>Primavera</legend>
           <label for="">
             <input
@@ -178,7 +178,7 @@
             Primavera Brilhante
           </label>
         </fieldset>
-        <fieldset>
+        <fieldset class="outono">
           <legend>Outono</legend>
           <label for="">
             <input type="checkbox" name="Outono/Quente/Puro" id="outono" />
@@ -194,7 +194,7 @@
           </label>
         </fieldset>
         <h2>Estações Frias</h2>
-        <fieldset>
+        <fieldset class="inverno">
           <legend>Inverno</legend>
           <label for="">
             <input type="checkbox" name="Inverno/Frio/Puro" id="inverno" />
@@ -209,7 +209,7 @@
             Inverno Brilhante
           </label>
         </fieldset>
-        <fieldset>
+        <fieldset class="verao">
           <legend>Verão</legend>
           <label for="">
             <input type="checkbox" name="Verão/Suave" id="inverno" />
