label and checked together

--- a/index.html
+++ b/index.html
@@ -39,82 +39,94 @@
         <fieldset>
           <legend>Comparar Contraste</legend>
           <label for="Contraste/Baixo">
-            <input type="checkbox" name="Contraste/Baixo" id="contraste" />
+            <input
+              type="checkbox"
+              name="Contraste/Baixo"
+              id="Contraste/Baixo"
+            />
             Baixo
           </label>
           <label for="Contraste/Médio">
-            <input type="checkbox" name="Contraste/Médio" id="contraste" />
+            <input
+              type="checkbox"
+              name="Contraste/Médio"
+              id="Contraste/Médio"
+            />
             Médio
           </label>
           <label for="Contraste/Alto">
-            <input type="checkbox" name="Contraste/Alto" id="contraste" />
+            <input type="checkbox" name="Contraste/Alto" id="Contraste/Alto" />
             Alto
           </label>
           <label for="Contraste/Médio/Baixo">
             <input
               type="checkbox"
               name="Contraste/Médio/Baixo"
-              id="contraste"
+              id="Contraste/Médio/Baixo"
             />
             Médio/Baixo
           </label>
           <label for="Contraste/Médio/Alto">
-            <input type="checkbox" name="Contraste/Médio/Alto" id="contraste" />
+            <input
+              type="checkbox"
+              name="Contraste/Médio/Alto"
+              id="Contraste/Médio/Alto"
+            />
             Médio/Alto
           </label>
         </fieldset>
         <fieldset>
           <legend>1. Comparar os tecidos listrados</legend>
           <div class="div">
-            <label for="">
+            <label for="Tecidos Listrados - Claro">
               <input
                 type="checkbox"
                 name="Tecidos Listrados - Claro"
-                id="color"
+                id="Tecidos Listrados - Claro"
               />
               Claro
             </label>
-            <label class="input1" for="">
+            <label class="input1" for="Tecidos Listrados - Escuro">
               <input
                 type="checkbox"
                 name="Tecidos Listrados - Escuro"
-                id="color"
+                id="Tecidos Listrados - Escuro"
               />
               Escuro
             </label>
           </div>
           <div class="div">
-            <label for="">
+            <label for="Tecidos Listrados - Suave">
               <input
                 type="checkbox"
                 name="Tecidos Listrados - Suave"
-                id="suave"
+                id="Tecidos Listrados - Suave"
               />
               Suave
             </label>
-            <label for="">
+            <label for="Tecidos Listrados - Brilhante">
               <input
                 type="checkbox"
                 name="Tecidos Listrados - Brilhante"
-                id="suave"
+                id="Tecidos Listrados - Brilhante"
               />
               Brilhante
             </label>
           </div>
           <div class="div">
-            <label for="">
+            <label for="Tecidos Listrados - Frio">
               <input
                 type="checkbox"
                 name="Tecidos Listrados - Frio"
-                id="clima"
+                id="Tecidos Listrados - Frio"
               />
               Frio
             </label>
-            <label class="input2" for="">
+            <label class="input2" for="Tecidos Listrados - Quente">
               <input
                 type="checkbox"
                 name="Tecidos Listrados - Quente"
-                id="clima"
+                id="Tecidos Listrados - Quente"
               />
               Quente
             </label>
@@ -122,27 +134,27 @@
         </fieldset>
         <fieldset>
           <legend>2. Comparar o resultado com tecidos</legend>
-          <label for="">
+          <label for="Resultado com Tecidos - Quente">
             <input
               type="checkbox"
               name="Resultado com Tecidos - Quente"
-              id="result"
+              id="Resultado com Tecidos - Quente"
             />
             Quente
           </label>
-          <label for="">
+          <label for="Resultado com Tecidos - Frio">
             <input
               type="checkbox"
               name="Resultado com Tecidos - Frio"
-              id="result"
+              id="Resultado com Tecidos - Frio"
             />
             Frio
           </label>
-          <label for="">
+          <label for="Resultado com Tecidos - Neutro">
             <input
               type="checkbox"
               name="Resultado com Tecidos - Neutro"
-              id="result"
+              id="Resultado com Tecidos - Neutro"
             />
             Neutro
           </label>
@@ -161,66 +173,90 @@
         <h2>Estações Quentes</h2>
         <fieldset class="primavera">
           <legend>Primavera</legend>
-          <label for="">
+          <label for="Primavera/Quente/Puro">
             <input
               type="checkbox"
               name="Primavera/Quente/Puro"
-              id="primavera"
+              id="Primavera/Quente/Puro"
             />
             Primavera Quente/Puro
           </label>
-          <label for="">
-            <input type="checkbox" name="Primavera/Claro" id="primavera" />
+          <label for="Primavera/Claro">
+            <input
+              type="checkbox"
+              name="Primavera/Claro"
+              id="Primavera/Claro"
+            />
             Primavera Claro
           </label>
-          <label for="">
-            <input type="checkbox" name="Primavera/Brilhante" id="primavera" />
+          <label for="Primavera/Brilhante">
+            <input
+              type="checkbox"
+              name="Primavera/Brilhante"
+              id="Primavera/Brilhante"
+            />
             Primavera Brilhante
           </label>
         </fieldset>
         <fieldset class="outono">
           <legend>Outono</legend>
-          <label for="">
-            <input type="checkbox" name="Outono/Quente/Puro" id="outono" />
+          <label for="Outono/Quente/Puro">
+            <input
+              type="checkbox"
+              name="Outono/Quente/Puro"
+              id="Outono/Quente/Puro"
+            />
             Outono Quente/Puro
           </label>
-          <label for="">
-            <input type="checkbox" name="Outono/Escuro" id="outono" />
+          <label for="Outono/Escuro">
+            <input type="checkbox" name="Outono/Escuro" id="Outono/Escuro" />
             Outono Escuro
           </label>
-          <label for="">
-            <input type="checkbox" name="Outono/Suave" id="outono" />
+          <label for="Outono/Suave">
+            <input type="checkbox" name="Outono/Suave" id="Outono/Suave" />
             Outono Suave
           </label>
         </fieldset>
         <h2>Estações Frias</h2>
         <fieldset class="inverno">
           <legend>Inverno</legend>
-          <label for="">
-            <input type="checkbox" name="Inverno/Frio/Puro" id="inverno" />
+          <label for="Inverno/Frio/Puro">
+            <input
+              type="checkbox"
+              name="Inverno/Frio/Puro"
+              id="Inverno/Frio/Puro"
+            />
             Inverno Frio/Puro
           </label>
-          <label for="">
-            <input type="checkbox" name="Inverno/Escuro" id="inverno" />
+          <label for="Inverno/Escuro">
+            <input type="checkbox" name="Inverno/Escuro" id="Inverno/Escuro" />
             Inverno Escuro
           </label>
-          <label for="">
-            <input type="checkbox" name="Inverno/Brilhante" id="inverno" />
+          <label for="Inverno/Brilhante">
+            <input
+              type="checkbox"
+              name="Inverno/Brilhante"
+              id="Inverno/Brilhante"
+            />
             Inverno Brilhante
           </label>
         </fieldset>
         <fieldset class="verao">
           <legend>Verão</legend>
-          <label for="">
-            <input type="checkbox" name="Verão/Suave" id="inverno" />
+          <label for="Verão/Suave">
+            <input type="checkbox" name="Verão/Suave" id="Verão/Suave" />
             Verão Suave
           </label>
-          <label for="">
-            <input type="checkbox" name="Verão/Frio/Puro" id="inverno" />
+          <label for="Verão/Frio/Puro">
+            <input
+              type="checkbox"
+              name="Verão/Frio/Puro"
+              id="Verão/Frio/Puro"
+            />
             Verão Frio/Puro
           </label>
-          <label for="">
-            <input type="checkbox" name="Verão/Claro" id="inverno" />
+          <label for="Verão/Claro">
+            <input type="checkbox" name="Verão/Claro" id="Verão/Claro" />
             Verão Claro
           </label>
         </fieldset>
