--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <body>
     <header>
       <div>
-        <img class="logo" src="logo.png" alt="" />
+        <img class="logo" src="images/logo.png" alt="" />
         <div class="img">
-          <img src="kath.png" alt="" />
+          <img src="images/kath.png" alt="" />
         </div>
       </div>
     </header>
